// ============================================================================
// /finance/controlling-service (版本 1.0 - 生产级 SAP CO 增强版)
// 描述: 提供成本中心分配 (Cost Center Allocation) 执行、模拟与管理功能。
//       支持分摊 (Distribution)、分配 (Assessment) 和 间接作业分配。
// ----------------------------------------------------------------------------
// 设计基线（SAP S/4HANA CO 模块）：
// - 兼容 KSV5 (Distribution) 和 KSU5 (Assessment) 逻辑
// - 支持多周期 (Cycle) 和 多段 (Segment) 执行
// - 统一使用 MonetaryValue 表示金额
// - 严格遵循 SAP 财务年度、期间和分配规则
// ============================================================================

syntax = "proto3";

package fi.co.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/openapiv2.proto";
import "common/common.proto";

// OpenAPI 全局配置
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Cost Center Allocation Service API"
    version: "1.0.0"
    description: "成本中心管理服务 - 提供成本分配、模拟及异步作业管理"
    contact: {
      name: "Controlling Team"
      email: "co-dev@yourproject.com"
    }
  }
  host: "localhost:8082"
  base_path: "/"
  schemes: HTTP
  schemes: HTTPS
  consumes: "application/json"
  produces: "application/json"
  security_definitions: {
    security: {
      key: "bearer_auth"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Bearer token for authentication"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer_auth"
      value: {}
    }
  }
};

// ============================================================================
// 服务定义: CostCenterAllocationService
// ============================================================================

service CostCenterAllocationService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "成本中心分配服务"
    external_docs: {
      url: "https://yourproject.com/docs/finance/co";
      description: "CO 服务详细文档";
    }
  };

  // 执行成本中心分配 (异步模式 - 生产级)
  rpc ExecuteAllocation(ExecuteRequest) returns (ExecuteResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/co/allocations:execute"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Allocation Execution"
      summary: "执行成本分配"
      description: "启动一个异步作业来执行指定的分配循环"
    };
  }

  // 模拟成本中心分配
  rpc SimulateAllocation(ExecuteRequest) returns (SimulationResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/co/allocations:simulate"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Allocation Execution"
      summary: "模拟成本分配"
    };
  }

  // 冲销成本中心分配 (异步模式)
  rpc ReverseAllocation(ExecuteRequest) returns (ExecuteResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/co/allocations:reverse"
      body: "*"
    };
  }

  // 批量执行分配 (异步模式)
  rpc ExecuteAllocationBatch(ExecuteBatchRequest) returns (ExecuteResponse) {
    option (google.api.http) = {
      post: "/api/v1/finance/co/allocations:batchExecute"
      body: "*"
    };
  }

  // 获取作业状态 (New)
  rpc GetJobStatus(GetJobStatusRequest) returns (common.v1.JobInfo) {
    option (google.api.http) = {
      get: "/api/v1/finance/co/jobs/{job_id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Job Management"
      summary: "获取作业状态"
    };
  }

  // --------------------------------------------------------------------------
  // === 周期与段管理 ===
  // --------------------------------------------------------------------------

  // 获取分配周期定义
  rpc GetCycleDefinition(GetCycleRequest) returns (CycleDefinition) {
    option (google.api.http) = {
      get: "/api/v1/finance/co/cycles/{cycle_id}"
    };
  }

  // 列出分配周期
  rpc ListCycles(ListCyclesRequest) returns (ListCyclesResponse) {
    option (google.api.http) = {
      get: "/api/v1/finance/co/cycles"
    };
  }
}

// ============================================================================
// 数据结构: 枚举
// ============================================================================

// 分配类型
enum AllocationType {
  ALLOCATION_TYPE_UNSPECIFIED = 0;
  DISTRIBUTION = 1;        // 分摊 (KSV) - 仅限初级成本要素
  ASSESSMENT = 2;          // 分配 (KSU) - 使用次级成本要素
  INDIRECT_ACTIVITY = 3;   // 间接作业分配
}

// 执行模式
enum ExecutionMode {
  EXECUTION_MODE_UNSPECIFIED = 0;
  ACTUAL = 1;              // 实际分配
  PLAN = 2;                // 计划分配
}

// 追踪基准类型
enum TracingBaseType {
  TRACING_BASE_UNSPECIFIED = 0;
  FIXED_AMOUNTS = 1;       // 固定金额
  FIXED_PERCENTAGES = 2;   // 固定百分比
  FIXED_PORTIONS = 3;      // 固定份数
  VARIABLE_PORTIONS = 4;   // 统计指标/可变份额
}

// ============================================================================
// 数据结构: 周期与段定义
// ============================================================================

// 分配周期定义 (Cycle)
message CycleDefinition {
  string cycle_id = 1;
  google.protobuf.Timestamp start_date = 2;
  string description = 3;
  AllocationType allocation_type = 4;
  string controlling_area = 5;
  ExecutionMode mode = 6;
  bool is_active = 7;
  repeated SegmentDefinition segments = 8;
  common.v1.AuditData audit_data = 9;
}

// 分配段定义 (Segment)
message SegmentDefinition {
  string segment_name = 1;
  string description = 2;
  
  // 发送者规则
  string sender_rule = 3;   // Posted amounts, Fixed amounts, etc.
  double sender_percentage = 4;
  
  // 接收者规则
  TracingBaseType receiver_rule = 5;
  string variable_portion_type = 6; // 统计指标代码 e.g. "SKF_001"
  
  // 选择标准 (Sender/Receiver)
  SelectionCriteria senders = 7;
  SelectionCriteria receivers = 8;
  
  // 成本要素/次级科目
  string cost_element = 9;
}

// 选择标准
message SelectionCriteria {
  repeated string cost_centers = 1;
  repeated string cost_elements = 2;
  repeated string business_processes = 3;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 执行请求
message ExecuteRequest {
  string controlling_area = 1;
  int32 fiscal_year = 2;
  int32 fiscal_period = 3;
  string cycle_id = 4;
  google.protobuf.Timestamp posting_date = 5;
  bool test_run = 6;
  string run_text = 7;
  common.v1.RequestContext context = 99;
}

// 执行响应 (异步模式)
message ExecuteResponse {
  string job_id = 1;
  common.v1.JobStatus initial_status = 2;
  common.v1.RequestContext context = 99;
}

// 批量执行请求
message ExecuteBatchRequest {
  string controlling_area = 1;
  int32 fiscal_year = 2;
  int32 fiscal_period = 3;
  repeated string cycle_ids = 4;
  bool test_run = 5;
  common.v1.RequestContext context = 99;
}

// 模拟响应
message SimulationResponse {
  bool success = 1;
  repeated AllocationResult results = 2;
  repeated common.v1.ApiMessage messages = 3;
}

// 分配结果 (明细)
message AllocationResult {
  string segment_name = 1;
  string sender_cost_center = 2;
  string receiver_cost_center = 3;
  string cost_element = 4;
  common.v1.MonetaryValue amount = 5;
  string currency = 6;
}

// 查询请求
message GetCycleRequest {
  string cycle_id = 1;
  common.v1.RequestContext context = 99;
}

message ListCyclesRequest {
  string controlling_area = 1;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

message ListCyclesResponse {
  repeated CycleDefinition cycles = 1;
  common.v1.PaginationResponse pagination = 2;
}

message GetJobStatusRequest {
  string job_id = 1;
  common.v1.RequestContext context = 99;
}
