// ============================================================================
// /manufacturing/kanban-service (版本 2.0)
// 描述: 管理看板控制周期和看板状态，触发补货流程。
//       字段设计参考核心ERP的 PKHD (看板控制周期) 和 PKPS (看板状态) 表。
// ============================================================================

syntax = "proto3";

package enterprise.manufacturing.kanban;

option java_package = "com.enterprise.manufacturing.kanban.v2";
option java_multiple_files = true;
option go_package = "github.com/enterprise-extensions/manufacturing/kanban/v2;kanban";

import "common/common.proto";
import "google/api/annotations.proto";

// ============================================================================
// 服务定义: KanbanService
// ============================================================================

service KanbanService {
  // 创建看板控制周期 (New)
  rpc CreateKanbanControlCycle(CreateControlCycleRequest) returns (ControlCycleResponse) {

    option (google.api.http) = {

      post: "/api/v1/manufacturing/kanban-control-cycle"

      body: "*"

    };

  }

  // 更新看板控制周期 (New)
  rpc UpdateKanbanControlCycle(UpdateControlCycleRequest) returns (ControlCycleResponse) {


    option (google.api.http) = {


      put: "/api/v1/manufacturing/kanban-control-cycle"


      body: "*"


    };


  }

  // 获取看板控制周期详情
  rpc GetKanbanControlCycle(GetKanbanControlCycleRequest) returns (KanbanControlCycle) {


    option (google.api.http) = {


      get: "/api/v1/manufacturing/kanban-control-cycle"


    };


  }

  // 更改看板状态 (例如, 从 EMPTY 到 FULL)
  rpc ChangeKanbanStatus(ChangeKanbanStatusRequest) returns (ChangeKanbanStatusResponse) {


    option (google.api.http) = {


      post: "/api/v1/manufacturing/change-kanban-status"


      body: "*"


    };


  }

  // 查询看板容器列表
  rpc ListKanbanContainers(ListKanbanContainersRequest) returns (ListKanbanContainersResponse) {


    option (google.api.http) = {


      get: "/api/v1/manufacturing/kanban-containers"


    };


  }
}

// ============================================================================
// 数据结构: Kanban
// ============================================================================

// 看板控制周期 (参考: PKHD)
message KanbanControlCycle {
  // 控制周期编号 (原: REGEL)
  string control_cycle_number = 1;
  // 物料编号 (原: MATNR)
  string material = 2;
  // 工厂 (原: WERKS)
  string plant = 3;
  // 生产供应区域 (原: PRVBE)
  string production_supply_area = 4;
  // 看板容器数量 (原: ANZPK)
  int32 number_of_kanbans = 5;
  // 每个看板的数量 (原: KANMNG)
  enterprise.common.QuantityValue quantity_per_kanban = 6;
  // 补货策略
  enterprise.common.ReplenishmentStrategy replenishment_strategy = 7;
}

// 看板容器
message KanbanContainer {
  // 容器ID (通常是控制周期号 + 序列号)
  string container_id = 1;
  // 控制周期编号
  string control_cycle_number = 2;
  // 当前状态
  enterprise.common.KanbanStatus status = 3;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 创建看板控制周期请求
message CreateControlCycleRequest {
  KanbanControlCycle control_cycle = 1;
  enterprise.common.RequestContext context = 99;
}

// 更新看板控制周期请求
message UpdateControlCycleRequest {
  string control_cycle_number = 1;
  KanbanControlCycle control_cycle = 2;
  repeated string update_mask = 3;
  enterprise.common.RequestContext context = 99;
}

// 控制周期响应
message ControlCycleResponse {
  bool success = 1;
  string control_cycle_number = 2;
  repeated enterprise.common.ApiMessage messages = 3;
}

// 获取看板控制周期请求
message GetKanbanControlCycleRequest {
  // 控制周期编号
  string control_cycle_number = 1;
  enterprise.common.RequestContext context = 99;
}

// 更改看板状态请求
message ChangeKanbanStatusRequest {
  // 容器ID
  string container_id = 1;
  // 新的状态
  enterprise.common.KanbanStatus new_status = 2;
  // 请求上下文
  enterprise.common.RequestContext context = 99;
}

// 更改看板状态响应
message ChangeKanbanStatusResponse {
  // 操作是否成功
  bool success = 1;
  // 触发的补货凭证号 (例如, 生产订单号或采购订单号)
  string replenishment_document_number = 2;
  // 从核心ERP返回的消息列表
  repeated enterprise.common.ApiMessage messages = 3;
}

// 查询看板容器请求
message ListKanbanContainersRequest {
  // 工厂
  string plant = 1;
  // 生产供应区域
  string production_supply_area = 2;
  // 物料编号
  string material = 3;
  // 状态过滤器
  enterprise.common.KanbanStatus status = 4;
  // 分页请求
  enterprise.common.PaginationRequest pagination = 98;
  // 请求上下文
  enterprise.common.RequestContext context = 99;
}

// 查询看板容器响应
message ListKanbanContainersResponse {
  // 容器列表
  repeated KanbanContainer containers = 1;
  // 分页响应
  enterprise.common.PaginationResponse pagination = 2;
}
